--- a/doc/说明文档.md
+++ b/doc/说明文档.md
@@ -24,6 +24,16 @@
 - y 轴为节点编号
 - z 轴为节点负荷
 
+#### 单次取样方法
+
+- 确定电动车充电功率 P 为 快充功率
+- 随机抽取电动车电池容量 W
+- 随机抽取电动车的起始位置
+- 随机抽取电动车起始 SOC_S
+- 随机抽取电动车充电结束 SOC_E (>SOC_S)
+- 求出电动车结束充电时间 TIME_END = TIME_START + W * (SOC_E - SOC_S) / P
+- 得到该次电动车一天中的充电时间段(开始时间, 结束时间)
+
 ### 出租车基于 od 矩阵加入道路抗阻系数的充电时空负荷分布
 
 - x 轴为时间
