--- a/doc/说明文档.md
+++ b/doc/说明文档.md
@@ -28,8 +28,13 @@
 
 - 确定电动车充电功率 P 为 快充功率
 - 随机抽取电动车电池容量 W
-- 随机抽取电动车的起始位置
-- 随机抽取电动车起始 SOC_S
+- 随机抽取电动车起始运行 SOC_S
+- 随机抽取电动车起始充电 SOC_S_C
+- 随机抽取电动车的起始位置 POS_S
+- 随机接客
+- 随机抽取目的地
+- 计算电量消耗
+- 计算剩余电量是否低于 SOC_S_C, 低于则充电
 - 随机抽取电动车充电结束 SOC_E (>SOC_S)
 - 求出电动车结束充电时间 TIME_END = TIME_START + W * (SOC_E - SOC_S) / P
 - 得到该次电动车一天中的充电时间段(开始时间, 结束时间)
@@ -40,8 +45,39 @@
 - y 轴为节点编号
 - z 轴为节点负荷
 
+#### 单次取样方法
+
+- 确定电动车充电功率 P 为 快充功率
+- 确定电动车电池容量 W ,
+- 确定电动车理想行驶速度 V_ORIGIN = 60km/h ( 调整后平均值控制在35km/h , 最小 10km/h , 最大 80km/h )
+- 随机抽取电动车起始运行 TIME_WORK_S               上班时间
+- 随机抽取电动车起始充电 SOC_S_C             低于该SOC则开始充电
+- 随机抽取电动车的起始位置 POS_S             根据车流量大小随机选取
+- 随机接客:
+- 随机抽取目的地, 通过dijkstra算法得到路径长度, 计算电量消耗
+- 计算剩余电量是否低于 SOC_S_C, 低于则充电
+- 随机抽取电动车充电结束 SOC_E (>SOC_S)
+- 求出电动车结束充电时间 TIME_END = TIME_START + W * (SOC_E - SOC_S) / P
+- 得到该次电动车一天中的充电时间段(开始时间, 结束时间)
+
+
 ### 出租车基于以上方法加入用户后悔度的充电时空负荷分布
 
 - x 轴为时间
 - y 轴为节点编号
 - z 轴为节点负荷
+
+#### 单次取样方法
+
+- 确定电动车充电功率 P 为 快充功率
+- 随机抽取电动车电池容量 W
+- 随机抽取电动车起始运行 SOC_S
+- 随机抽取电动车起始充电 SOC_S_C
+- 随机抽取电动车的起始位置 POS_S
+- 随机接客
+- 随机抽取目的地
+- 计算电量消耗
+- 计算剩余电量是否低于 SOC_S_C, 低于则充电
+- 随机抽取电动车充电结束 SOC_E (>SOC_S)
+- 求出电动车结束充电时间 TIME_END = TIME_START + W * (SOC_E - SOC_S) / P
+- 得到该次电动车一天中的充电时间段(开始时间, 结束时间)
