--- a/doc/说明文档.md
+++ b/doc/说明文档.md
@@ -79,3 +79,9 @@
 - 随机抽取电动车充电结束 SOC_E (>SOC_S)
 - 求出电动车结束充电时间 TIME_END = TIME_START + W \* (SOC_E - SOC_S) / P
 - 得到该次电动车一天中的充电时间段(开始时间, 结束时间)
+
+### 粒子群优化充电站建设成本分配
+
+- 确定目标函数
+- 确定约束条件
+
